[gd_scene load_steps=6 format=3 uid="uid://dpfxvaabano1j"]

[ext_resource type="Script" path="res://scripts/inventory/sc_bullet.gd" id="1_poqh6"]
[ext_resource type="Texture2D" uid="uid://bo3cwed33kb57" path="res://sprites/items/item_spawnables/SC_bullet.png" id="2_rkv3k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1inn"]
size = Vector2(6, 4)

[sub_resource type="Animation" id="Animation_kxedc"]
resource_name = "fade"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/main_body_2/sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4, 0.6, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.156863), Color(1, 1, 1, 0.156863), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ii10t"]
_data = {
"fade": SubResource("Animation_kxedc")
}

[node name="sc_bullet" type="Node2D" node_paths=PackedStringArray("sprite")]
texture_filter = 1
script = ExtResource("1_poqh6")
sprite = NodePath("main_body/main_body_2/sprite/ScBullet")

[node name="main_body" type="Node2D" parent="."]

[node name="main_body_2" type="Node2D" parent="main_body"]

[node name="Area2D" type="Area2D" parent="main_body/main_body_2"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/main_body_2/Area2D"]
shape = SubResource("RectangleShape2D_l1inn")

[node name="sprite" type="Node2D" parent="main_body/main_body_2"]

[node name="ScBullet" type="Sprite2D" parent="main_body/main_body_2/sprite"]
texture = ExtResource("2_rkv3k")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade"
libraries = {
"": SubResource("AnimationLibrary_ii10t")
}

[connection signal="body_entered" from="main_body/main_body_2/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
